kdepim (4:2.1-20010101-1) unstable; urgency=low
 
  * New upstream cvs version
  * korganizer is now 2.1beta1 as well
        
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 01 Jan 2001 15:30:00 -0700

kdepim (4:2.1-20001218-1) unstable; urgency=low

  * New upstream cvs version
  * Including kpilot, 2 years and 10 days after I did the ITP for it (Closes: #68255)
  * korganizer is the 2.0.1 version still

 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 18 Dec 2000 23:00:00 -0700

kdepim (2.0-20001011-0) unstable; urgency=low
 
  * KDE 2.0 RC2
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Thu, 12 Sep 2000 06:00:00 -0700
                                                                                
kdepim (2.0-20001006-0) unstable; urgency=low
 
  * More upstream fixes
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Fri, 06 Sep 2000 22:00:00 -0700
                                                                                
kdepim (2.0-20001005-0) unstable; urgency=low
 
  * More upstream fixes
  * Compiling against non-versioned kdelibs once again
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Thu, 05 Sep 2000 15:00:00 -0700
                                                                                
kdepim (2.0-20001002-0) unstable; urgency=low
 
  * KDE 2.0 RC1
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 02 Sep 2000 01:30:00 -0700
                                                                                
kdepim (2.0-20000925-2) unstable; urgency=low

  * More upstream fixes
  * Clean build against new libc6

 -- Ivan E. Moore II <rkrusty@debian.org>  Tue, 26 Sep 2000 22:30:00 -0700

kdepim (2.0-20000925-0) unstable; urgency=low
 
  * More upstream fixes
  * Build-Depends work
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 25 Sep 2000 15:30:00 -0700

kdepim (2.0-20000920-2) unstable; urgency=low
 
  * Fixing some dependencies
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Thu, 21 Sep 2000 17:30:00 -0700
