@@ -1,0 +1,3 @@
+usr/lib/*ical*.so
+usr/lib/*ical*.a
+usr/include/*ical*
