@@ -1,0 +1,10 @@
+/usr/lib/libical.so.0.0.0
+/usr/lib/libical.la
+/usr/lib/libicalss.so.0.0.0
+/usr/lib/libicalss.la
+/usr/lib/libicalvcal.so.0.0.0
+/usr/lib/libicalvcal.la
+/usr/share/doc/libical/*
+/usr/lib/libical.so.0
+/usr/lib/libicalss.so.0
+/usr/lib/libicalvcal.so.0
