@@ -1,0 +1,30 @@
+#! /bin/sh
+# postinst script for libical
+#
+# see: dh_installdeb(1)
+
+set -e
+
+case "$1" in
+    configure)
+      /sbin/ldconfig
+    ;;
+
+    abort-upgrade|abort-remove|abort-deconfigure)
+
+    ;;
+
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 0
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
+
+
