@@ -1,0 +1,3 @@
+libical 0 libical (>= 4:2.1-20010101-0)
+libicalss 0 libical (>= 4:2.1-20010101-0)
+libicalvcal 0 libical (>= 4:2.1-20010101-0)
